add logo to standings
